# catmd

./: Cargo.toml  DEMO.md  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml
Formula/: catmd.rb
src/: main.rs  markdown.rs
tests/: integration_cli.rs
tests/fixtures/: markdown_sample.md  plain.txt
