[package]
name = "catmd"
version = "0.1.2"
edition = "2021"
description = "A cat-like CLI that renders Markdown files with ANSI styling and syntax-highlighted code blocks"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.20"
pulldown-cmark = "0.9"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
